force-app/main/default/objects/Competitor_Proximity__c/Competitor_Proximity__c.object-meta.xml
<CustomObject>
    <description>Nearby Competitor Stores</description>
    <label>Competitor Proximity</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Proximities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>