force-app/main/default/objects/Competitor_Proximity__c/fields/Brand_Category__c.field-meta.xml
<CustomField>
    <fullName>Brand_Category__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Competitive classification used in weighting within Agentforce scoring</inlineHelpText>
    <label>Brand Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Competitor</fullName>
            </value>
            <value>
                <fullName>Adjacent Category</fullName>
            </value>
            <value>
                <fullName>Anchor Store</fullName>
            </value>
            <value>
                <fullName>Indirect Competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>