force-app/main/default/objects/Competitor_Proximity__c/fields/Competitor_Account__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the Account record with Record Type = Competitor_Outlet 

Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>Competitor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitor Proximities</relationshipLabel>
    <relationshipName>Competitor_Proximities</relationshipName>
    <type>Lookup</type>
</CustomField>