force-app/main/default/objects/Competitor_Proximity__c/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Brand or store name of the competitor; populated from web-scrape import</inlineHelpText>
    <label>Competitor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>