force-app/main/default/objects/Competitor_Proximity__c/fields/Data_As_Of__c.field-meta.xml
<CustomField>
    <fullName>Data_As_Of__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Date the competitor data was last validated</inlineHelpText>
    <label>Data As Of</label>
    <type>Date</type>
</CustomField>