force-app/main/default/objects/Competitor_Proximity__c/fields/Distance_km__c.field-meta.xml
<CustomField>
    <fullName>Distance_km__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Straight-line distance from the Potential Site to this competitor in kilometres</inlineHelpText>
    <label>Distance (km)</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>