force-app/main/default/objects/Competitor_Proximity__c/fields/Is_Within_1km__c.field-meta.xml
<CustomField>
    <fullName>Is_Within_1km__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <formula>Distance_km__c&lt;=1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Within 1km</label>
    <type>Checkbox</type>
</CustomField>