force-app/main/default/objects/Competitor_Proximity__c/fields/Potential_Site__c.field-meta.xml
<CustomField>
    <fullName>Potential_Site__c</fullName>
    <description>Master-detail to the Potential Site being evaluated 

Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>Potential Site</label>
    <referenceTo>Potential_Site__c</referenceTo>
    <relationshipLabel>Competitor Proximities</relationshipLabel>
    <relationshipName>Competitor_Proximities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>