force-app/main/default/objects/Competitor_Proximity__c/fields/Store_Size_Category__c.field-meta.xml
<CustomField>
    <fullName>Store_Size_Category__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Size tier of the competitor outlet</inlineHelpText>
    <label>Store Size Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small (&lt;1000 sqft)</fullName>
            </value>
            <value>
                <fullName>Medium (1000–3000 sqft)</fullName>
            </value>
            <value>
                <fullName>Large (&gt;3000 sqft)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>