force-app/main/default/objects/Competitor_Proximity__c/fields/Threat_Score__c.field-meta.xml
<CustomField>
    <fullName>Threat_Score__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <formula>IF(
  Distance_km__c &lt;= 1, 100,
  IF(
    Distance_km__c &lt;= 3, 60,
    IF(
      Distance_km__c &lt;= 5, 30,
      10
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Threat Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>