force-app/main/default/objects/Competitor_Proximity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Competitor_Name__c</columns>
    <columns>Potential_Site__c</columns>
    <columns>Threat_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>